feature to priduct

--- a/products.html
+++ b/products.html
@@ -34,12 +34,12 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                             <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                                     <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
                                     <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
                                 </ul>
@@ -70,11 +70,11 @@
     <!--================Hero Banner Area Start =================-->
     <section class="hero-banner d-flex align-items-center">
         <div class="container text-center">
-            <h2>Features</h2>
+            <h2>Products</h2>
             <nav aria-label="breadcrumb" class="banner-breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Features</li>
+                    <li class="breadcrumb-item active" aria-current="page">Products</li>
                 </ol>
             </nav>
         </div>
