--- a/Favison SAAS -doc/index.html
+++ b/Favison SAAS -doc/index.html
@@ -65,8 +65,8 @@
 					<p>This document covers the installation and use of this theme and often reveals answers to common problems and issues - read this document thoroughly if you are experiencing any difficulties. If you have any questions that are beyond the scope of this document. Thank you so much!</p>
 				</div>
 
-				<div class="features">
-					<h2 class="twenty">Template Features</h2>
+				<div class="products">
+					<h2 class="twenty">Template Products</h2>
 
 					<ul>
 						<li>Clean &amp; Simple Design</li>
