--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,12 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                             <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                                     <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
                                     <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
                                 </ul>
@@ -92,7 +92,7 @@
             var uluru = {lat: -25.363, lng: 131.044};
             var grayStyles = [
               {
-                featureType: "all",
+                productType: "all",
                 stylers: [
                   { saturation: -90 },
                   { lightness: 50 }
