--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                             <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                                     <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
                                     <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
                                 </ul>
@@ -182,7 +182,7 @@
     <!--================About Area End =================-->
 
     <!--================Feature  Area =================-->
-    <section class="feature-area area-padding bg_one">
+    <section class="product-area area-padding bg_one">
         <div class="container">
             <div class="row align-items-center">
 
@@ -193,22 +193,22 @@
                     </div>
                     <div class="row">
                         <div class="col-">
-                            <div class="single-feature d-flex">
-                                <div class="feature-icon">
+                            <div class="single-product d-flex">
+                                <div class="product-icon">
                                     <i class="ti-layers"></i>
                                 </div>
-                                <div class="single-feature-content">
+                                <div class="single-product-content">
                                     <h5>Add New Project</h5>
                                     <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-">
-                            <div class="single-feature d-flex">
-                                <div class="feature-icon">
+                            <div class="single-product d-flex">
+                                <div class="product-icon">
                                     <i class="ti-layers"></i>
                                 </div>
-                                <div class="single-feature-content">
+                                <div class="single-product-content">
                                     <h5>Generating Leads</h5>
                                     <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
                                 </div>
