--- a/single-blog.html
+++ b/single-blog.html
@@ -34,12 +34,12 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                             <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
                                     <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
                                     <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
                                 </ul>
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-lg-8 posts-list">
                     <div class="single-post">
-                        <div class="feature-img">
+                        <div class="product-img">
                             <img class="img-fluid" src="img/blog/main-blog/m-blog-1.jpg" alt="">
                         </div>
 <!-- <div class="col-lg-3  col-md-3">
