--- a/features.html
+++ b/features.html
@@ -34,30 +34,22 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
                             <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
-                                    <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#">Plagiarism Detection</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="#">KYC</a></li> 
+
                                 </ul>
-                            </li>
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                </ul>
-                            </li> 
+                            </li>                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> 
+
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="right-button">
                         <ul>
-                            <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li>
-                            <li><a class="sign_up" href="">Sign Up</a></li>
+                            <!-- <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li> -->
+                            <!-- <li><a class="sign_up" href="">Sign Up</a></li> -->
                         </ul>
                     </div> 
                 </div>
@@ -70,11 +62,11 @@
     <!--================Hero Banner Area Start =================-->
     <section class="hero-banner d-flex align-items-center">
         <div class="container text-center">
-            <h2>Products</h2>
+            <h2>Features</h2>
             <nav aria-label="breadcrumb" class="banner-breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Products</li>
+                    <li class="breadcrumb-item active" aria-current="page">Features</li>
                 </ol>
             </nav>
         </div>
@@ -201,11 +193,11 @@
                 <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
                     <h4>Important Link</h4>
                     <ul>
-                        <li><a href="#">WHMCS-bridge</a></li>
-                        <li><a href="#">Search Domain</a></li>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Shopping Cart</a></li>
-                        <li><a href="#">Our Shop</a></li>
+                        <li><a href="https://www.linkedin.com/company/sentrywave">Linkedin</a></li>
+                        <li><a href="https://www.facebook.com/sentrywave">Facebook</a></li>
+                        <li><a href="https://twitter.com/sentrywave">Twitter</a></li>
+                        <li><a href="https://github.com/sentrywave">Github</a></li>
+                        
                     </ul>
                 </div>
 
