--- a/index.html
+++ b/index.html
@@ -34,30 +34,23 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
+   
                             <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li> 
-                                    <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#">Plagiarism Detection</a></li> 
+                                    <li class="nav-item"><a class="nav-link" href="#">KYC</a></li> 
+
                                 </ul>
-                            </li>
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                </ul>
-                            </li> 
+                            </li>                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> 
+
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="right-button">
                         <ul>
-                            <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li>
-                            <li><a class="sign_up" href="">Sign Up</a></li>
+                             <!-- <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li> -->
+                            <!-- <li><a class="sign_up" href="">Sign Up</a></li> -->
                         </ul>
                     </div> 
                 </div>
@@ -182,7 +175,7 @@
     <!--================About Area End =================-->
 
     <!--================Feature  Area =================-->
-    <section class="product-area area-padding bg_one">
+    <section class="feature-area area-padding bg_one">
         <div class="container">
             <div class="row align-items-center">
 
@@ -193,22 +186,22 @@
                     </div>
                     <div class="row">
                         <div class="col-">
-                            <div class="single-product d-flex">
-                                <div class="product-icon">
+                            <div class="single-feature d-flex">
+                                <div class="feature-icon">
                                     <i class="ti-layers"></i>
                                 </div>
-                                <div class="single-product-content">
+                                <div class="single-feature-content">
                                     <h5>Add New Project</h5>
                                     <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-">
-                            <div class="single-product d-flex">
-                                <div class="product-icon">
+                            <div class="single-feature d-flex">
+                                <div class="feature-icon">
                                     <i class="ti-layers"></i>
                                 </div>
-                                <div class="single-product-content">
+                                <div class="single-feature-content">
                                     <h5>Generating Leads</h5>
                                     <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
                                 </div>
@@ -264,7 +257,7 @@
 
 
     <!--================ Start Portfolio Area =================-->
-    <section class="pricing_area area-padding-top">
+    <!-- <section class="pricing_area area-padding-top">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -358,13 +351,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================ End Pricing Area =================-->
 
 
 
     <!--================ Start Blog Area =================-->
-    <section class="latest-blog-area area-padding">
+    <!-- <section class="latest-blog-area area-padding">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
@@ -469,57 +462,57 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================ End Blog Area =================-->
 
 
     <!--================ Start Brands Area =================-->
-    <section class="brands-area area-padding-bottom">
+    <!-- <section class="brands-area area-padding-bottom">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <div class="owl-carousel brand-carousel">
+                    <div class="owl-carousel brand-carousel"> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/1.png" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/2.png" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/3.png" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/4.png" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/5.png" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single-brand -->
-                        <div class="single-brand-item d-table">
+                        <!-- <div class="single-brand-item d-table">
                             <div class="d-table-cell">
                                 <img src="img/logo/3.png" alt="">
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================ End Brands Area =================-->
 
 
@@ -549,17 +542,17 @@
                 <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
                     <h4>Important Link</h4>
                     <ul>
-                        <li><a href="#">WHMCS-bridge</a></li>
-                        <li><a href="#">Search Domain</a></li>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Shopping Cart</a></li>
-                        <li><a href="#">Our Shop</a></li>
+                        <li><a href="https://www.linkedin.com/company/sentrywave">Linkedin</a></li>
+                        <li><a href="https://www.facebook.com/sentrywave">Facebook</a></li>
+                        <li><a href="https://twitter.com/sentrywave">Twitter</a></li>
+                        <li><a href="https://github.com/sentrywave">Github</a></li>
+                        
                     </ul>
                 </div>
 
                 <div class="col-lg-3 col-md-8 mb-4 mb-xl-0 single-footer-widget">
                     <h4>Newsletter</h4>
-                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days open</p>
+                    <p>Subscribe to our email Newletters</p>
 
                     <div class="form-wrap" id="mc_embed_signup">
                         <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
