--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="banner_content">
                             <h3>Sentrywave <br/>Private Limited</h3>
                             <p>Sentrywave (Pvt) Limited in a registered company in Zimbabwe. Our primary area of focus is Software Development. We develop several software under the company and for several other clients.</p>
-                            <a class="banner_btn" href="#">Begin Free Trial<i class="ti-arrow-right"></i></a>
+                            <a class="banner_btn" href="https://github.com/sentrywave">Our Projects <i class="ti-arrow-right"></i></a>
                         </div>
                     </div>
 
@@ -139,10 +139,10 @@
 
                 <div class="col-lg-6">
                     <div class="area-heading">
-                        <h4>Form Female From<br>Cattle Evening. </h4>
-                        <h6>And appear great open bearing evening dominion vodi </h6>
+                        <h4>Enterprise Software<br> Development.</h4>
+                        <h6>Web, Mobile &amp; Desktop Applications</h6>
 
-                        <p>There earth face earth behold. She'd stars made void two given do and also. Our own grass days.  Greater male Shall There faced earth behold She star</p>
+                        <p>Sentrywave develops high quality software for all use cases using modern technologies.</p>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-lg-6">
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="single-about-content">
                                     <h5>Cloud Compatibility</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
+                                    <p>Our software are compatible with cloud technologies</p>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="single-about-content">
                                     <h5>On Time Delivery</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
+                                    <p>We deliver products in time</p>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
     <!--================About Area End =================-->
 
     <!--================Feature  Area =================-->
-    <section class="feature-area area-padding bg_one">
+    <!-- <section class="feature-area area-padding bg_one">
         <div class="container">
             <div class="row align-items-center">
 
@@ -211,12 +211,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================Feature Area End =================-->
 
 
     <!--================About  Area =================-->
-    <section class="statics-area area-padding">
+    <!-- <section class="statics-area area-padding">
         <div class="container">
             <div class="row">
 
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================About Area End =================-->
 
 
