--- a/about.html
+++ b/about.html
@@ -125,7 +125,6 @@
     </section>
     <!--================Service Area end =================-->
 
-
     <!--================About  Area =================-->
     <section class="about-area area-padding-bottom">
         <div class="container">
@@ -133,10 +132,10 @@
 
                 <div class="col-lg-6">
                     <div class="area-heading">
-                        <h4>Form Female From<br>Cattle Evening. </h4>
-                        <h6>And appear great open bearing evening dominion vodi </h6>
+                        <h4>Enterprise Software<br> Development.</h4>
+                        <h6>Web, Mobile &amp; Desktop Applications</h6>
 
-                        <p>There earth face earth behold. She'd stars made void two given do and also. Our own grass days.  Greater male Shall There faced earth behold She star</p>
+                        <p>Sentrywave develops high quality software for all use cases using modern technologies.</p>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-lg-6">
@@ -146,7 +145,7 @@
                                 </div>
                                 <div class="single-about-content">
                                     <h5>Cloud Compatibility</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
+                                    <p>Our software are compatible with cloud technologies</p>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +156,7 @@
                                 </div>
                                 <div class="single-about-content">
                                     <h5>On Time Delivery</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
+                                    <p>We deliver products in time</p>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +167,7 @@
     </section>
     <!--================About Area End =================-->
 
- <!-- ================ start footer Area ================= -->
+    <!-- ================ start footer Area ================= -->
     <footer class="footer-area">
         <div class="container">
             <div class="row">
