--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
               <h3>Harare, Zimbabwe.</h3>
-              <p>Rosemead, CA 91770</p>
+              <!-- <p>Rosemead, CA 91770</p> -->
             </div>
           </div>
           <div class="media contact-info">
