--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Sentrywave, Payment Processing, TPPSP, Software Engineering, Software Development, Enterprise Software" />
+    <meta name="description" content="Sentrywave (Private) Limited is a software and internet startup that develops various solutions to automate processes and to solve problems across various industries." />
+    <meta name="author" content="Victor Chinyavada" />
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Sentrywave (Pvt) Limited</title>
+    <title>Sentrywave | Home</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/themify-icons.css">
