--- a/about.html
+++ b/about.html
@@ -84,11 +84,11 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="single-service">
                         <div class="service-icon">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="ti-money"></i>
                         </div>
                         <div class="service-content">
-                            <h5>Unique Design</h5>
-                            <p>Third don't lights wherein was. bring to build them, seas. Thing gathering answ gaered beast third that heaven after all that living one bank limit</p>
+                            <h5>Payment Processing</h5>
+                            <p>An established Payment Service Provider with a Payment Gateway that processes Credit &amp; Debit Cards, Ecocash and OneMoney. </p>
                             <a href="#">Read More</a>
                         </div>
                     </div>
