--- a/about.html
+++ b/about.html
@@ -101,8 +101,8 @@
                             <i class="ti-image"></i>
                         </div>
                         <div class="service-content">
-                            <h5>Business Solution</h5>
-                            <p>Third don't lights wherein was. bring to build them, seas. Thing gathering answ gaered beast third that heaven after all that living one bank limit</p>
+                            <h5>Enterprise Software</h5>
+                            <p>Sentrywave develops high quality software for all use cases using modern technologies.</p>
                             <a href="#">Read More</a>
                         </div>
                     </div>
