--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Sentrywave (Private) Limited is a software and internet startup that develops various solutions to automate processes and to solve problems across various industries." />
     <meta name="author" content="Victor Chinyavada" />
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Sentrywave (Pvt) Limited</title>
+    <title>Sentrywave | About</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/themify-icons.css">
