add terms and conditions

--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,251 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords"
+          content="Sentrywave, Payment Processing, TPPSP, Software Engineering, Software Development, Enterprise Software"/>
+    <meta name="description"
+          content="Sentrywave (Private) Limited is a software and internet startup that develops various solutions to automate processes and to solve problems across various industries."/>
+    <meta name="author" content="Victor Chinyavada"/>
+    <link rel="icon" href="img/favicon.png" type="image/png">
+    <title>Sentrywave | About</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendors/animate-css/animate.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+</head>
+<body>
 
+<!--================Header Menu Area =================-->
+<header class="header_area">
+    <div class="main_menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav menu_nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item submenu dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true" aria-expanded="false">Products</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a class="nav-link" href="#">Plagiarism Detection</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">KYC</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="right-button">
+                    <ul>
+                        <!-- <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li> -->
+                        <!-- <li><a class="sign_up" href="">Sign Up</a></li> -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+<!--================Header Menu Area =================-->
+
+
+<!--================Hero Banner Area Start =================-->
+<section class="hero-banner d-flex align-items-center">
+    <div class="container text-center">
+        <h2>Privacy Policy</h2>
+        <nav aria-label="breadcrumb" class="banner-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Privacy Policy</li>
+            </ol>
+        </nav>
+    </div>
+</section>
+<!--================Hero Banner Area End =================-->
+
+<!--================Service  Area =================-->
+<section class="service-area area-padding">
+    <div class="container">
+        <div class="row">
+            <p>Our chatbot is designed to offer paid AI services and other convenience tools to users who communicate
+                with it via WhatsApp. We are committed to protecting the privacy of our users and have implemented
+                measures to ensure that their personal information is safeguarded. This privacy policy outlines the
+                types of information we collect from users and how we use that information.</p>
+
+            <h2>Information We Collect</h2>
+
+            <p>When you interact with our chatbot, we may collect the following types of information:</p>
+
+            <ol>
+                <li>
+                    Personal Information: We may collect your name, phone number, and other contact information that you
+                    provide us when you sign up for our services or subscribe to our newsletter.
+                </li>
+                <li>
+                    Conversational Data: We may collect information about your interactions with our chatbot, including
+                    the messages you send and receive, the time and date of those messages, and any other data related
+                    to your use of our services.
+                </li>
+                <li>
+                    Payment Information: If you choose to purchase our services, we do not collect payment information,
+                    such as your credit card number or other payment details.
+                </li>
+            </ol>
+
+
+            <h2>How We Use Your Information</h2>
+
+            <p>We use the information we collect from users to provide our services and improve the user experience.
+                Specifically, we may use your information for the following purposes:</p>
+
+            <ol>
+                <li>To provide our services and respond to your requests.</li>
+
+                <li>To process payments for our services.</li>
+
+                <li>To communicate with you about our services, updates, and other relevant information.</li>
+
+                <li>To personalize your experience and improve our services.</li>
+
+                <li>To analyze user behavior and improve our chatbot's functionality.</li>
+            </ol>
+
+
+            <h2>Data Security</h2>
+
+            <p>We take data security seriously and have implemented measures to protect the personal information we collect
+            from users. We use industry-standard encryption to secure data transmissions and follow best practices to
+            safeguard user data from unauthorized access, disclosure, or destruction.</p>
+
+            <h2>Third-Party Providers</h2>
+
+            <p>We may use third-party providers to help us deliver our services, process payments, and analyze user
+            behavior. These providers may have access to your personal information, but only to the extent necessary to
+            provide their services. We ensure that all third-party providers we work with are compliant with data
+                protection regulations and follow industry-standard security practices.</p>
+
+            <h2>Updates to Our Privacy Policy</h2>
+
+            <p>We may update this privacy policy from time to time to reflect changes in our services, industry
+            regulations, or other relevant factors. We recommend that users review this policy periodically to stay
+                informed of any changes.</p>
+        </div>
+    </div>
+</section>
+<!--================Service Area end =================-->
+
+<!-- ================ start footer Area ================= -->
+<footer class="footer-area">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>About Us</h4>
+                <p>Sentrywave (Pvt) Limited in a registered company in Zimbabwe. Our primary area of focus is Software
+                    Development. We develop several software under the company and for several other clients.</p>
+                <div class="footer-logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Contact Info</h4>
+                <div class="footer-address">
+                    <p>Address : Harare, Zimbabwe</p>
+                    <span>Phone : +263782135087</span>
+                    <span>Email : <a href="mailto:info@sentrywave.com">info@sentrywave.com</a></span>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Important Link</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/company/sentrywave">Linkedin</a></li>
+                    <li><a href="https://www.facebook.com/sentrywave">Facebook</a></li>
+                    <li><a href="https://twitter.com/sentrywave">Twitter</a></li>
+                    <li><a href="https://github.com/sentrywave">Github</a></li>
+
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-8 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Newsletter</h4>
+                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
+                    open</p>
+
+                <div class="form-wrap" id="mc_embed_signup">
+                    <form target="_blank"
+                          action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                          method="get">
+                        <div class="input-group">
+                            <input type="email" class="form-control" name="EMAIL" placeholder="Your Email Address"
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '">
+                            <div class="input-group-append">
+                                <button class="btn click-btn" type="submit">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div style="position: absolute; left: -5000px;">
+                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                        </div>
+
+                        <div class="info"></div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-bottom row align-items-center text-center text-lg-left no-gutters">
+            <p class="footer-text m-0 col-lg-8 col-md-12">
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                All rights reserved
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
+                <a href="https://www.facebook.com/sentrywave"><i class="ti-facebook"></i></a>
+                <a href="https://twitter.com/sentrywave"><i class="ti-twitter-alt"></i></a>
+                <a href="https://github.com/sentrywave"><i class="ti-github"></i></a>
+                <a href="https://www.linkedin.com/company/sentrywave"><i class="ti-linkedin"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- ================ End footer Area ================= -->
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="js/jquery-2.2.4.min.js"></script>
+<script src="js/popper.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="js/jquery.ajaxchimp.min.js"></script>
+<script src="js/waypoints.min.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/jquery.form.js"></script>
+<script src="js/jquery.validate.min.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/theme.js"></script>
+</body>
+</html>
