--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,229 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords"
+          content="Sentrywave, Payment Processing, TPPSP, Software Engineering, Software Development, Enterprise Software"/>
+    <meta name="description"
+          content="Sentrywave (Private) Limited is a software and internet startup that develops various solutions to automate processes and to solve problems across various industries."/>
+    <meta name="author" content="Victor Chinyavada"/>
+    <link rel="icon" href="img/favicon.png" type="image/png">
+    <title>Sentrywave | About</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendors/animate-css/animate.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+</head>
+<body>
 
+<!--================Header Menu Area =================-->
+<header class="header_area">
+    <div class="main_menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav menu_nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item submenu dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true" aria-expanded="false">Products</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a class="nav-link" href="#">Plagiarism Detection</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">KYC</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="right-button">
+                    <ul>
+                        <!-- <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li> -->
+                        <!-- <li><a class="sign_up" href="">Sign Up</a></li> -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+<!--================Header Menu Area =================-->
+
+
+<!--================Hero Banner Area Start =================-->
+<section class="hero-banner d-flex align-items-center">
+    <div class="container text-center">
+        <h2>Terms & Conditions</h2>
+        <nav aria-label="breadcrumb" class="banner-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Terms & Conditions</li>
+            </ol>
+        </nav>
+    </div>
+</section>
+<!--================Hero Banner Area End =================-->
+
+<!--================Service  Area =================-->
+<section class="service-area area-padding">
+    <div class="container">
+        <div class="row">
+            <p>By using our service, you agree to comply with these terms and conditions. Please read them carefully
+                before using our chatbot.</p>
+
+            <ol>
+                <li>
+                    <b>PAYMENT:</b> You will need tokens to use our chatbot service. You can purchase tokens in the app,
+                    and we will charge your account. Tokens are non-refundable and non-transferable.
+                </li>
+                <li>
+                    <b>USAGE:</b> Our chatbot service is for personal use only. You may not share your account with
+                    anyone else. We may restrict or cancel your access to our service if we suspect that you have
+                    violated this clause.
+                </li>
+                <li>
+                    <b>REFUNDS:</b> Refunds will only be made after thorough investigation and deliberation by our team.
+                    We reserve the right to reject any refund request as we deem fit.
+                </li>
+                <li>
+                    <b>LIABILITY:</b> We are not responsible for any damages or losses incurred by you or any third
+                    party as a result of your use of our chatbot service. We are not liable for any damages or losses
+                    that result from your phone getting into the wrong hands.
+                </li>
+                <li>
+                    <b>ERRORS:</b> We strive to provide accurate and error-free service. However, we cannot guarantee
+                    that errors will not occur from time to time. We will make every effort to correct any errors as
+                    soon as possible.
+                </li>
+                <li>
+                    <b>LEGAL ACTION:</b> You agree not to take any legal action against us for any damages or losses
+                    incurred by you or any third party as a result of your use of our chatbot service.
+                </li>
+                <br/>
+                <p>We reserve the right to modify these terms and conditions at any time without prior notice. Your
+                    continued use of our chatbot service after any modifications indicate that you agree to the
+                    changes.</p>
+
+                <p>If you have any questions or concerns about these terms and conditions, please contact us at
+                    <a href="mailto:info@sentrywave.com">info@sentrywave.com</a></p>
+            </ol>
+
+        </div>
+    </div>
+</section>
+<!--================Service Area end =================-->
+
+<!-- ================ start footer Area ================= -->
+<footer class="footer-area">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>About Us</h4>
+                <p>Sentrywave (Pvt) Limited in a registered company in Zimbabwe. Our primary area of focus is Software
+                    Development. We develop several software under the company and for several other clients.</p>
+                <div class="footer-logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Contact Info</h4>
+                <div class="footer-address">
+                    <p>Address : Harare, Zimbabwe</p>
+                    <span>Phone : +263782135087</span>
+                    <span>Email : <a href="mailto:info@sentrywave.com">info@sentrywave.com</a></span>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-6 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Important Link</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/company/sentrywave">Linkedin</a></li>
+                    <li><a href="https://www.facebook.com/sentrywave">Facebook</a></li>
+                    <li><a href="https://twitter.com/sentrywave">Twitter</a></li>
+                    <li><a href="https://github.com/sentrywave">Github</a></li>
+
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-8 mb-4 mb-xl-0 single-footer-widget">
+                <h4>Newsletter</h4>
+                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
+                    open</p>
+
+                <div class="form-wrap" id="mc_embed_signup">
+                    <form target="_blank"
+                          action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                          method="get">
+                        <div class="input-group">
+                            <input type="email" class="form-control" name="EMAIL" placeholder="Your Email Address"
+                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '">
+                            <div class="input-group-append">
+                                <button class="btn click-btn" type="submit">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div style="position: absolute; left: -5000px;">
+                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                        </div>
+
+                        <div class="info"></div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-bottom row align-items-center text-center text-lg-left no-gutters">
+            <p class="footer-text m-0 col-lg-8 col-md-12">
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                All rights reserved
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
+                <a href="https://www.facebook.com/sentrywave"><i class="ti-facebook"></i></a>
+                <a href="https://twitter.com/sentrywave"><i class="ti-twitter-alt"></i></a>
+                <a href="https://github.com/sentrywave"><i class="ti-github"></i></a>
+                <a href="https://www.linkedin.com/company/sentrywave"><i class="ti-linkedin"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- ================ End footer Area ================= -->
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="js/jquery-2.2.4.min.js"></script>
+<script src="js/popper.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="js/jquery.ajaxchimp.min.js"></script>
+<script src="js/waypoints.min.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/jquery.form.js"></script>
+<script src="js/jquery.validate.min.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/theme.js"></script>
+</body>
+</html>
